cluster/apps/monitoring/elastic-system/kibana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: "kibana.${SECRET_CLUSTER_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-kb-http
                port:
                  number: 5601
